unpackaged/main/default/objects/Email_Macro__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>DCA</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>