unpackaged/main/default/objects/Email_Macro__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Email Macros</relationshipLabel>
    <relationshipName>Email_Macros1</relationshipName>
    <type>Lookup</type>
</CustomField>