unpackaged/main/default/objects/Email_Macro__c/fields/Macro_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Macro_Identifier__c</fullName>
    <label>Macro Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>